Fixed overlapping elements on mobile for gallery

--- a/css/styles.css
+++ b/css/styles.css
@@ -183,6 +183,7 @@ section h2 {
   border-top: 0px solid var(--bg-colour);
   transition: 1s;
   padding: 0;
+  padding-bottom: 30px;
 }
 
 #gallery button{
